<resources>
    <string name="app_name">Calculadora</string>
    <string name="bt0">0</string>
    <string name="bt1">1</string>
    <string name="bt2">2</string>
    <string name="bt3">3</string>
    <string name="bt4">4</string>
    <string name="bt5">5</string>
    <string name="bt6">6</string>
    <string name="bt7">7</string>
    <string name="bt8">8</string>
    <string name="bt9">9</string>
    <string name="btMinus">-</string>
    <string name="btPlus">+</string>
    <string name="btMulti">X</string>
    <string name="btDiv">/</string>
    <string name="btClear">Borrar</string>
    <string name="btEqual">=</string>
    <string name="btComa">,</string>
</resources>