<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLh1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="641dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLh2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="641dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLh3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="641dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLh4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="641dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLh5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="641dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLh6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="641dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLh7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="641dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="641dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="641dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="641dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="641dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="641dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt0"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/GLv1"
        app:layout_constraintEnd_toStartOf="@id/GLv2"
        app:layout_constraintBottom_toTopOf="@id/GLh1"
        app:layout_constraintTop_toBottomOf="@id/GLh2"
        android:text="@string/bt0"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEqual"
        style="@style/SimpleButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/GLv3"
        app:layout_constraintEnd_toStartOf="@id/GLv5"
        app:layout_constraintBottom_toTopOf="@id/GLh1"
        app:layout_constraintTop_toBottomOf="@id/GLh2"
        android:text="@string/btEqual"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt1"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/GLv1"
        app:layout_constraintEnd_toStartOf="@id/GLv2"
        app:layout_constraintBottom_toTopOf="@id/GLh2"
        app:layout_constraintTop_toBottomOf="@id/GLh3"
        android:text="@string/bt1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt2"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/GLv2"
        app:layout_constraintEnd_toStartOf="@id/GLv3"
        app:layout_constraintBottom_toTopOf="@id/GLh2"
        app:layout_constraintTop_toBottomOf="@id/GLh3"
        android:text="@string/bt2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt3"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/GLv3"
        app:layout_constraintEnd_toStartOf="@id/GLv4"
        app:layout_constraintBottom_toTopOf="@id/GLh2"
        app:layout_constraintTop_toBottomOf="@id/GLh3"
        android:text="@string/bt3"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plus"
        style="@style/SimpleButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/GLv4"
        app:layout_constraintEnd_toStartOf="@id/GLv5"
        app:layout_constraintBottom_toTopOf="@id/GLh2"
        app:layout_constraintTop_toBottomOf="@id/GLh3"
        android:text="@string/btPlus"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt4"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/GLv1"
        app:layout_constraintEnd_toStartOf="@id/GLv2"
        app:layout_constraintBottom_toTopOf="@id/GLh3"
        app:layout_constraintTop_toBottomOf="@id/GLh4"
        android:text="@string/bt4"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt5"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/GLv2"
        app:layout_constraintEnd_toStartOf="@id/GLv3"
        app:layout_constraintBottom_toTopOf="@id/GLh3"
        app:layout_constraintTop_toBottomOf="@id/GLh4"
        android:text="@string/bt5"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt6"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/GLv3"
        app:layout_constraintEnd_toStartOf="@id/GLv4"
        app:layout_constraintBottom_toTopOf="@id/GLh3"
        app:layout_constraintTop_toBottomOf="@id/GLh4"
        android:text="@string/bt6"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMinus"
        style="@style/SimpleButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/GLv4"
        app:layout_constraintEnd_toStartOf="@id/GLv5"
        app:layout_constraintBottom_toTopOf="@id/GLh3"
        app:layout_constraintTop_toBottomOf="@id/GLh4"
        android:text="@string/btMinus"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt7"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/GLv1"
        app:layout_constraintEnd_toStartOf="@id/GLv2"
        app:layout_constraintBottom_toTopOf="@id/GLh4"
        app:layout_constraintTop_toBottomOf="@id/GLh5"
        android:text="@string/bt7"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt8"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/GLv2"
        app:layout_constraintEnd_toStartOf="@id/GLv3"
        app:layout_constraintBottom_toTopOf="@id/GLh4"
        app:layout_constraintTop_toBottomOf="@id/GLh5"
        android:text="@string/bt8"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt9"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/GLv3"
        app:layout_constraintEnd_toStartOf="@id/GLv4"
        app:layout_constraintBottom_toTopOf="@id/GLh4"
        app:layout_constraintTop_toBottomOf="@id/GLh5"
        android:text="@string/bt9"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMulti"
        style="@style/SimpleButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/GLv4"
        app:layout_constraintEnd_toStartOf="@id/GLv5"
        app:layout_constraintBottom_toTopOf="@id/GLh4"
        app:layout_constraintTop_toBottomOf="@id/GLh5"
        android:text="@string/btMulti"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btClear"
        style="@style/SimpleButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btClear"
        app:layout_constraintBottom_toTopOf="@id/GLh1"
        app:layout_constraintEnd_toStartOf="@id/GLv3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/GLv2"
        app:layout_constraintTop_toBottomOf="@id/GLh2"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btDiv"
        style="@style/SimpleButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/GLv4"
        app:layout_constraintEnd_toStartOf="@id/GLv5"
        app:layout_constraintBottom_toTopOf="@id/GLh5"
        app:layout_constraintTop_toBottomOf="@id/GLh6"
        android:text="@string/btDiv"/>

</androidx.constraintlayout.widget.ConstraintLayout>